--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,14 +25,15 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.32 alpha 3</label><br>
+          <label>Версия релиза 0.0.33 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Добавлена возможность поиска по пользователям</mat-list-item>
+            <mat-list-item role="listitem">Добавлена возможность поиска по музыке</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
-            <mat-list-item role="listitem">Исправлены проблемы с регистрацией</mat-list-item>
+            <mat-list-item role="listitem">Исправлено отображение некоторых кнопок</mat-list-item>
           </mat-list>
         </mat-tab>
         <mat-tab label="Результаты тестирования рекомендательной системы">
