--- a/music-cloud-web/src/main/web/src/app/app.component.html
+++ b/music-cloud-web/src/main/web/src/app/app.component.html
@@ -34,7 +34,7 @@
                     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
                 </button>
                  <div *ngIf="!shared.isMobile() && shared.isLogin" class="header-panel-el">Вы вошли как: {{showUserInfo()}}</div>
-                <button *ngIf="!shared.isMobile() && shared.isLogin" class="header-panel-el" routerLink="/settings" mat-raised-button color="accent">Настройки</button>
+                <button *ngIf="!shared.isMobile() && shared.isLogin" class="header-panel-el" routerLink="/settings" mat-raised-button color="link">Настройки</button>
                 <button  *ngIf="!shared.isMobile() && shared.isLogin" class="header-panel-el" mat-raised-button color="warn" (click)="shared.logout()">Выход</button>
             </div>
             <div class="header-control-label-panel">
