searching filters pagination was fixed

--- a/music-cloud-web/src/main/web/src/app/components/users/users.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/users/users.component.html
@@ -50,6 +50,6 @@
         <p mat-line *ngIf="user.userDetails.firstName !== null || user.userDetails.lastName !== null"> {{user.userDetails.nick}} </p>
       </mat-list-item>
     </mat-list>
-    <span *ngIf="users.length === 0">Пользватели не найдены</span>
+    <span *ngIf="users.length === 0">Пользователи не найдены</span>
   </div>
 </div>
