--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.33 alpha 3</label><br>
+          <label>Версия релиза 0.0.34 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Добавлена возможность поиска по пользователям</mat-list-item>
@@ -34,6 +34,8 @@
           <label>Ошибки</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Исправлено отображение некоторых кнопок</mat-list-item>
+            <mat-list-item role="listitem">Исправлено отображение текста в некоторых местах</mat-list-item>
+            <mat-list-item role="listitem">Исправлена паджинация элементов при использовании поисковых фильтров</mat-list-item>
           </mat-list>
         </mat-tab>
         <mat-tab label="Результаты тестирования рекомендательной системы">
