--- a/music-cloud-web/src/main/web/src/app/components/login/login.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 ﻿<div class="login-container">
     <h3>Пожалуйста, введите свои данные для логина</h3>
     <mat-form-field class="login-text-input" appearance="outline">
-        <mat-label>Email</mat-label>
+        <mat-label>Email или логин</mat-label>
         <input matInput type="email" placeholder="Введите свой email адресс" [(ngModel)]="model.email" (keyup.enter)="login()">
     </mat-form-field>
     <mat-form-field class="login-text-input" appearance="outline">
