--- a/music-cloud-web/src/main/web/src/app/components/settings/settings.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/settings/settings.component.html
@@ -38,25 +38,25 @@
                 <div>
                     <mat-form-field class="setting-text-input" appearance="outline">
                         <mat-label>Имя</mat-label>
-                        <input matInput type="email" placeholder="Введите имя" [(ngModel)]="loggedUser.userDetails.firstName">
+                        <input matInput type="search" placeholder="Введите имя" [(ngModel)]="loggedUser.userDetails.firstName">
                     </mat-form-field>
                 </div>
                 <div>
                     <mat-form-field class="setting-text-input" appearance="outline">
                         <mat-label>Фамилия</mat-label>
-                        <input matInput type="email" placeholder="Введите фамилию" [(ngModel)]="loggedUser.userDetails.lastName">
+                        <input matInput type="search" placeholder="Введите фамилию" [(ngModel)]="loggedUser.userDetails.lastName">
                     </mat-form-field>
                 </div>
                 <div>
                     <mat-form-field class="setting-text-input" appearance="outline">
                         <mat-label>Никнейм</mat-label>
-                        <input matInput type="email" placeholder="Введите никнейм" [(ngModel)]="loggedUser.userDetails.nick">
+                        <input matInput type="search" placeholder="Введите никнейм" [(ngModel)]="loggedUser.userDetails.nick">
                     </mat-form-field>
                 </div>
                 <div>
                     <mat-form-field class="setting-text-input" appearance="outline">
                         <mat-label>О себе</mat-label>
-                        <input matInput type="email" placeholder="Введите информацию о себе" [(ngModel)]="loggedUser.userDetails.about">
+                        <input matInput type="search" placeholder="Введите информацию о себе" [(ngModel)]="loggedUser.userDetails.about">
                     </mat-form-field>
                 </div>
                 <div>
