--- a/music-cloud-web/src/main/web/src/app/components/additional/additional.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/additional/additional.component.html
@@ -1,3 +1,4 @@
-<p>
-  additional works!
-</p>
+<div class="additional-container">
+  <h3 class="additional-container-item">Здесь вы можете задать для треков жанры и настроения</h3>
+</div>
+
