--- a/music-cloud-web/src/main/web/src/app/components/additional/additional.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/additional/additional.component.html
@@ -1,4 +1,5 @@
 <div class="additional-container">
   <h3 class="additional-container-item">Здесь вы можете задать для треков жанры и настроения</h3>
+  <span>Трек: {{track.title + ", " + track.artist + ", " + track.year}}</span>
 </div>
 
