1) refactoring 2) now users can to add genres and moods to tracks

--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,17 +25,18 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.35 alpha 3</label><br>
+          <label>Версия релиза 0.0.36 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
-            <mat-list-item role="listitem">Добавлена возможность поиска по пользователям</mat-list-item>
-            <mat-list-item role="listitem">Добавлена возможность поиска по музыке</mat-list-item>
+            <mat-list-item role="listitem">Теперь вы можете добавлять для треков жанры и настроения</mat-list-item>
+            <mat-list-item role="listitem">При изменении информации о треке можно оставлять пустые поля кроме названия и исполнителя</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Исправлены поля ввода на некоторых страницах</mat-list-item>
             <mat-list-item role="listitem">Убраны проблемы с отображением данных из-за неправильного кеширования</mat-list-item>
             <mat-list-item role="listitem">Убрано автосоздание жанров для треков</mat-list-item>
+            <mat-list-item role="listitem">Исправлены некоторые ошибки в консоли</mat-list-item>
           </mat-list>
         </mat-tab>
         <mat-tab label="Результаты тестирования рекомендательной системы">
