try to fix multiple result

--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.36 alpha 3</label><br>
+          <label>Версия релиза 0.0.37 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь вы можете добавлять для треков жанры и настроения</mat-list-item>
@@ -37,6 +37,7 @@
             <mat-list-item role="listitem">Убраны проблемы с отображением данных из-за неправильного кеширования</mat-list-item>
             <mat-list-item role="listitem">Убрано автосоздание жанров для треков</mat-list-item>
             <mat-list-item role="listitem">Исправлены некоторые ошибки в консоли</mat-list-item>
+            <mat-list-item role="listitem">Удалены дубликаты при поиске по жанрам и настроениям</mat-list-item>
           </mat-list>
         </mat-tab>
         <mat-tab label="Результаты тестирования рекомендательной системы">
