new audio player and background music playing with speed improvement

--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,11 +25,14 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.40 alpha 3</label><br>
+          <label>Версия релиза 0.0.41 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь вы можете добавлять для треков жанры и настроения</mat-list-item>
             <mat-list-item role="listitem">При изменении информации о треке можно оставлять пустые поля кроме названия и исполнителя</mat-list-item>
+            <mat-list-item role="listitem">Переделан аудио-плеер</mat-list-item>
+            <mat-list-item role="listitem">Добавлена возможность фонового проигрывания музыки</mat-list-item>
+            <mat-list-item role="listitem">Ускорено отображение страниц содержащих аудиофайлы</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
