--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.41 alpha 3</label><br>
+          <label>Версия релиза 0.0.42 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь вы можете добавлять для треков жанры и настроения</mat-list-item>
@@ -33,9 +33,11 @@
             <mat-list-item role="listitem">Переделан аудио-плеер</mat-list-item>
             <mat-list-item role="listitem">Добавлена возможность фонового проигрывания музыки</mat-list-item>
             <mat-list-item role="listitem">Ускорено отображение страниц содержащих аудиофайлы</mat-list-item>
+            <mat-list-item role="listitem">Изменено положение кнопок плеера</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
+            <mat-list-item role="listitem">Исправлено отображение плеера на странице логина</mat-list-item>
             <mat-list-item role="listitem">Исправлены поля ввода на некоторых страницах</mat-list-item>
             <mat-list-item role="listitem">Убраны проблемы с отображением данных из-за неправильного кеширования</mat-list-item>
             <mat-list-item role="listitem">Убрано автосоздание жанров для треков</mat-list-item>
