new player for mobile device has been improved

--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <mat-list>
       <mat-tab-group>
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.42 alpha 3</label><br>
+          <label>Версия релиза 0.0.43 alpha 3</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь вы можете добавлять для треков жанры и настроения</mat-list-item>
@@ -34,6 +34,7 @@
             <mat-list-item role="listitem">Добавлена возможность фонового проигрывания музыки</mat-list-item>
             <mat-list-item role="listitem">Ускорено отображение страниц содержащих аудиофайлы</mat-list-item>
             <mat-list-item role="listitem">Изменено положение кнопок плеера</mat-list-item>
+            <mat-list-item role="listitem">Улучшено отображение плеера на мобильных устройствах</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
