--- a/music-cloud-web/src/main/web/src/app/components/audio-player/audio-player.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/audio-player/audio-player.component.css
@@ -1,6 +1,6 @@
 .audio-player {
     background: black;
-    height: 50px;
+    min-height: 50px;
     width: 100%;
     display: flex;
     align-items: center;
