--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -23,27 +23,21 @@
   </div>
   <div class="about__content">
     <mat-list>
-      <mat-tab-group>
+      <mat-tab-group class="text">
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.0.44 alpha 3</label><br>
+          <label>Версия релиза 0.1.45 beta 1</label><br>
           <label>Обновления</label>
           <mat-list role="list">
-            <mat-list-item role="listitem">Теперь вы можете добавлять для треков жанры и настроения</mat-list-item>
-            <mat-list-item role="listitem">При изменении информации о треке можно оставлять пустые поля кроме названия и исполнителя</mat-list-item>
-            <mat-list-item role="listitem">Переделан аудио-плеер</mat-list-item>
-            <mat-list-item role="listitem">Добавлена возможность фонового проигрывания музыки</mat-list-item>
-            <mat-list-item role="listitem">Ускорено отображение страниц содержащих аудиофайлы</mat-list-item>
-            <mat-list-item role="listitem">Изменено положение кнопок плеера</mat-list-item>
-            <mat-list-item role="listitem">Улучшено отображение плеера на мобильных устройствах</mat-list-item>
+            <mat-list-item role="listitem">Теперь вы можете создавать плейлисты</mat-list-item>
+            <mat-list-item role="listitem">Теперь при загрузке трека он автоматически добавляется в вашу музыку</mat-list-item>
+            <mat-list-item role="listitem">Улучшено отображение текста в некоторых местах</mat-list-item>
+            <mat-list-item role="listitem">Панель с меню теперь автоматически закрывается после того как вы выбрали пункт на мобильных устройствах</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
-            <mat-list-item role="listitem">Исправлено отображение плеера на странице логина</mat-list-item>
-            <mat-list-item role="listitem">Исправлены поля ввода на некоторых страницах</mat-list-item>
-            <mat-list-item role="listitem">Убраны проблемы с отображением данных из-за неправильного кеширования</mat-list-item>
-            <mat-list-item role="listitem">Убрано автосоздание жанров для треков</mat-list-item>
-            <mat-list-item role="listitem">Исправлены некоторые ошибки в консоли</mat-list-item>
-            <mat-list-item role="listitem">Удалены дубликаты при поиске по жанрам и настроениям</mat-list-item>
+            <mat-list-item role="listitem">Исправлено продолжение проигрывания музыки при выходе из приложения</mat-list-item>
+            <mat-list-item role="listitem">Вы больше не видите сами себя в списке пользователей</mat-list-item>
+            <mat-list-item role="listitem">Исправлена возможность отправки встречной заявки в друзья</mat-list-item>
           </mat-list>
         </mat-tab>
         <mat-tab label="Результаты тестирования рекомендательной системы">
