--- a/music-cloud-web/src/main/web/src/app/components/home/home.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/home/home.component.html
@@ -37,10 +37,33 @@
                             </li>
                         </ul>
                     </mat-list>
-                    <span *ngIf="myMusic.length === 0">На данный момент у вас нет музыки</span>
+                    <span class="text" *ngIf="myMusic.length === 0">На данный момент у вас нет музыки</span>
                 </mat-tab>
                 <mat-tab label="Мои плейлисты">
-                    <span *ngIf="myPlaylists.length === 0">На данный момент у вас нет плейлистов</span>
+                    <button class="playlist-create-button" mat-raised-button color="primary" (click)="createPlaylist()">Создать плейлист</button>
+                    <mat-accordion>
+                        <mat-expansion-panel *ngFor="let playlist of myPlaylists" (opened)="playlist.panelOpenState = true"
+                                             (closed)="playlist.panelOpenState = false">
+                            <mat-expansion-panel-header>
+                                <mat-panel-title>
+                                    {{playlist.name}}
+                                </mat-panel-title>
+                                <mat-panel-description>
+                                </mat-panel-description>
+                            </mat-expansion-panel-header>
+                            <div class="playlist-control">
+                                <mat-icon class="playlist-control-item" mat-list-icon (click)="changePlaylist(playlist)">format_align_justify</mat-icon>
+                                <mat-icon class="playlist-control-item" mat-list-icon (click)="removePlaylist(playlist)">remove_circle</mat-icon>
+                            </div>
+
+                            <ul *ngFor="let track of playlist.tracks" class="track-list">
+                                <li class="track-item">
+                                    <audio-player-proxy [isGlobal]="false" [isHome]="false" [isRecommend]="false" [track]="track" [user]="user" [playlist]="playlist.tracks"></audio-player-proxy>
+                                </li>
+                            </ul>
+
+                        </mat-expansion-panel>
+                    </mat-accordion>
                 </mat-tab>
                 <mat-tab label="Мои друзья">
                     <mat-list>
@@ -52,7 +75,7 @@
                             <p mat-line *ngIf="user.userDetails.firstName !== null || user.userDetails.lastName !== null"> {{user.userDetails.nick}} </p>
                         </mat-list-item>
                     </mat-list>
-                    <span *ngIf="myFriends.length === 0">Вы еще не добавили никого в друзья</span>
+                    <span class="text" *ngIf="myFriends.length === 0">Вы еще не добавили никого в друзья</span>
                 </mat-tab>
                 <mat-tab label="Запросы в друзья">
                     <mat-list>
@@ -66,10 +89,10 @@
                             <p mat-line *ngIf="user.userDetails.firstName !== null || user.userDetails.lastName !== null"> {{user.userDetails.nick}} </p><br>
                         </mat-list-item>
                     </mat-list>
-                    <span *ngIf="myRequest.length === 0">Запросы отсутствуют</span>
+                    <span class="text" *ngIf="myRequest.length === 0">Запросы отсутствуют</span>
                 </mat-tab>
                 <mat-tab label="Рекомендации">
-                    <span *ngIf="recommendedMusic.length === 0">На данный момент недостаточно данных для формирования рекомендаций</span>
+                    <span class="text" *ngIf="recommendedMusic.length === 0">На данный момент недостаточно данных для формирования рекомендаций</span>
                     <mat-list>
                         <ul *ngFor="let track of recommendedMusic" class="track-list">
                             <li class="track-item">
