playlist names has been fixed

--- a/music-cloud-web/src/main/web/src/app/components/home/dialog/create-playlist.html
+++ b/music-cloud-web/src/main/web/src/app/components/home/dialog/create-playlist.html
@@ -3,7 +3,7 @@
     <p class="modal-window-text-item">{{description}}</p>
     <mat-form-field appearance="outline">
         <mat-label>Имя</mat-label>
-        <input matInput placeholder="Введите имя будущего плейлиста" [(ngModel)]="name">
+        <input matInput type="email" placeholder="Введите имя будущего плейлиста" [(ngModel)]="name">
     </mat-form-field>
 </div>
 <div mat-dialog-actions class="modal-window-buttons">
